# occupancySegmentation

./: .gitignore  CMakeLists.txt  run_test.cpp  run_test2.cpp
imgdb/: caffe_map.pgm
include/: roomSeg.h  roomSeg2.h  utility.h
src/: roomSeg.cpp  roomSeg2.cpp  utility.cpp
